auth swagger docs update
